@@ -35,10 +35,11 @@ JHtml::_('bootstrap.tooltip');
 	prev($list);
 	$penult_item_key = key($list);
 
-	// Generate the trail
-	foreach ($list as $key => $item) :
 	// Make a link if not the last item in the breadcrumbs
 	$show_last = $params->get('showLast', 1);
+
+	// Generate the trail
+	foreach ($list as $key => $item) :
 	if ($key != $last_item_key)
 	{
 		// Render all but last item - along with separator
