@@ -29,6 +29,7 @@ $ -> Language fix or change
  $ Updating installation lang files: af-ZA, be-BY, ca-ES, da-DK, de-DE, he-IL, hr-HR, hu-HU, pl-PL
  # [#31105] Truncate introtext can break html. Thanks Chad Windnagle
  # [#31278] Improve counting of results in queries. Thanks Matias Griese
+ # [#31179] code quality, mod_breadcrumbs. Thanks David Hurley and Denis Biwebco
 
 04-Jul-2013 Jean-Marie Simonet
  # [#31138] Correct the Bug after #31034. Thanks Tobias Zulauf and Peter Wiseman
